Updated the addtimeRegistration process to the database